Huge code overhaul, many possible bug fixes. Implementing Bukkit `Keyed` interface for WorldEvents. Introduced new Display interface `ITickingDisplay`, removed redundant WorldEventBossBar since we switch to wrapping the KeyedBossBar into the Display